src/main/java/com/example/fas/exceptions/user/invalid/ProviderNotSupportException.java
package com.example.fas.exceptions.user.invalid;

public class ProviderNotSupportException extends RuntimeException {
    public ProviderNotSupportException(String message) {
        super(message);
    }
}
